[package]
name = "restapi"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
ts-rs = "6.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
serde_with = "3.0.0"
dotenv = "0.15.0"
once_cell = "1.17.1"
env_logger = "0.10.0"
